# swig

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  go.mod  go.sum  go.work  go.work.sum  swig.go
.github/workflows/: autofix.yml  ci.yml
drivers/: driver.go  pgx.go  sql.go
examples/: Makefile  README.md  go.mod  go.sum
examples/pgx/: main.go
examples/sql/: main.go
pkg/: uuid.go
swig-docs/: README.md  package.json  pnpm-lock.yaml
swig-docs/content/docs/: 02-installation.mdx  03-configuration.mdx  04-examples.mdx  05-api.mdx  06-advanced.mdx  index.mdx
swig-docs/src/app/: layout.config.tsx  layout.tsx
swig-docs/src/app/(home)/: page.tsx
swig-docs/src/app/api/og/: route.tsx
swig-go/: README.md  go.mod  go.sum  swig.go
swig-go/drivers/: driver.go  pgx.go  sql.go
swig-go/workers/: workers.go
swig-rust/: Cargo.toml
swig-rust/src/drivers/: drivers.rs
workers/: workers.go
