[package]
name = "swig"
version = "0.1.0"
edition = "2024"
authors = ["glamboyosa <ogbemudiatimothy@gmail.com>"]

[dependencies]
diesel = { version = "2.2.0", features = ["postgres"], optional = true }
tokio-postgres = { version = "0.7.13", optional = true }

[features]
default = [
    "dep:tokio-postgres"
]
tokio = [
    "dep:tokio-postgres"
]
diesel = [
    "dep:diesel"
]
